[package]
name = "pso"
version = "0.1.0"
authors = ["toonnyy8 <toonnyy8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.1"
ndarray = "0.15.0"
ndarray-rand = "0.14.0"
num-traits = "0.2.14"
